--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.margin-offset-border-little {
+    margin-left: 0.25em;
+    margin-right: 0.25em;
+    margin-top: 0.25em;
+}
+
+.mat-radio-button~.mat-radio-button {
+    margin-left: 16px;
+}
