--- a/src/app/components/city-weather-forecast/city-weather-forecast.component.html
+++ b/src/app/components/city-weather-forecast/city-weather-forecast.component.html
@@ -1,8 +1,5 @@
 <!-- Title -->
-<mat-toolbar color="primary" style="justify-content: center">
-    {{ title }}
-</mat-toolbar>
-
+<mat-toolbar color="primary" style="justify-content: center" id="title">{{title}}</mat-toolbar>
 <div class="margin-offset-border-little" style="text-align:center">
 
     <img width="100" alt="Weather Logo" src="assets/img/weatherLogo.png" style="margin-top: 0.5em">
@@ -44,7 +41,7 @@
 
         <button buttonMarginSide mat-raised-button color="primary" [disabled]="!isWeatherForecastFormValid()" (click)="searchWeatherInfo()">Show Forecast</button>
 
-        <button buttonMarginSide mat-raised-button color="primary" [disabled]="!showWeatherInfo" (click)="cleanWeatherInfo()">Clean result</button>
+        <button id="clearButton" buttonMarginSide mat-raised-button color="primary" [disabled]="!showWeatherInfo" (click)="cleanWeatherInfo()">Clean result</button>
 
     </div>
     <br>
@@ -63,11 +60,11 @@
     <!-- Weather forecast founded -->
     <div *ngIf="showWeatherInfo">
         <mat-tab-group>
-            <mat-tab *ngFor="let weatherData of listWeatherInfo" [label]="weatherData.date | date ">
+            <mat-tab *ngFor="let weatherData of listWeatherInfo" [label]="weatherData.date | date " id="tabWeather">
 
                 <mat-grid-list cols="2" rowHeight="10:1">
                     <mat-grid-tile>Weather: </mat-grid-tile>
-                    <mat-grid-tile>
+                    <mat-grid-tile id="weatherType">
                         <img [src]="weatherData.icon" alt='current weather icon'> {{weatherData.weather}}
                     </mat-grid-tile>
 
